--- a/temas.html
+++ b/temas.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="discusion.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/discusion.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Foro de Iraic</title>
 </head>
 <body>
     <header>
-        <img src="header.png" alt="" class="img-fluid">
+        <img src="img/header.png" alt="" class="img-fluid">
     </header>
     <nav class="navbar navbar-expand-sm navbar-dark fondoMenu">
         <a href="" class="navbar-brand">
-            <img src="discusion.png" alt="" width="30px">
+            <img src="img/discusion.png" alt="" width="30px">
             Mi foro
         </a>
         <ul class="navbar-nav mr-auto">
@@ -56,8 +56,8 @@
                 <td>Programacion</td>
                 <td>Programacion basica en php</td>
                 <td>
-                    <button class="btn btn-outline-success"><img src="edit.png" width="20px" height="20px"></button>
-                    <button class="btn btn-outline-danger"><img src="close.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-success"><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-danger"><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
@@ -65,8 +65,8 @@
                 <td>Diseño</td>
                 <td>Diseño en photoshop</td>
                 <td>
-                    <button class="btn btn-outline-success"><img src="edit.png" width="20px" height="20px"></button>
-                    <button class="btn btn-outline-danger"><img src="close.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-success"><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-danger"><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
@@ -74,8 +74,8 @@
                 <td>Videojuegos</td>
                 <td>Juegos en linea CoD</td>
                 <td>
-                    <button class="btn btn-outline-success"><img src="edit.png" width="20px" height="20px"></button>
-                    <button class="btn btn-outline-danger"><img src="close.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-success"><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-danger"><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
@@ -83,8 +83,8 @@
                 <td>Pelis</td>
                 <td>Peliculas recientes o estrenos</td>
                 <td>
-                    <button class="btn btn-outline-success"><img src="edit.png" width="20px" height="20px"></button>
-                    <button class="btn btn-outline-danger"><img src="close.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-success"><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button class="btn btn-outline-danger"><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
         </tbody>
