--- a/usuarios.html
+++ b/usuarios.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="discusion.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/discusion.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Foro de Iraic</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
     </header>
     <nav>
         <span>
-            <img src="discusion.png" alt="" width="30px" height="30px">
+            <img src="img/discusion.png" alt="" width="30px" height="30px">
         </span>
         <ul>
             <li><a href="temas.html">Temas</a></li>
@@ -51,32 +51,32 @@
                 <td>admin</td>
                 <td>Administrador</td>
                 <td>
-                    <button><img src="edit.png" width="20px" height="20px"></button>
-                    <button><img src="close.png" width="20px" height="20px"></button>
+                    <button><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
                 <td>iraic</td>
                 <td>Usuario</td>
                 <td>
-                    <button><img src="edit.png" width="20px" height="20px"></button>
-                    <button><img src="close.png" width="20px" height="20px"></button>
+                    <button><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
                 <td>userx</td>
                 <td>Usuario</td>
                 <td>
-                    <button><img src="edit.png" width="20px" height="20px"></button>
-                    <button><img src="close.png" width="20px" height="20px"></button>
+                    <button><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
             <tr>
                 <td>root</td>
                 <td>Administrador</td>
                 <td>
-                    <button><img src="edit.png" width="20px" height="20px"></button>
-                    <button><img src="close.png" width="20px" height="20px"></button>
+                    <button><img src="img/edit.png" width="20px" height="20px"></button>
+                    <button><img src="img/close.png" width="20px" height="20px"></button>
                 </td>
             </tr>
         </tbody>
