--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="discusion.png" type="image/x-icon">
+    <link rel="shortcut icon" href="img/discusion.png" type="image/x-icon">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="estilo.css">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>Foro de Iraic</title>
 </head>
 
 <body>
     <header>
-        <img src="header.png" alt="" class="img-fluid">
+        <img src="img/header.png" alt="" class="img-fluid">
     </header>
     <nav class="navbar navbar-dark fondoMenu">
         <a href="" class="navbar-brand">
-            <img src="discusion.png" alt="" width="30px">
+            <img src="img/discusion.png" alt="" width="30px">
             Mi foro
         </a>
     </nav>
